--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "prestart": "npm run build",
-    "start": "node dist/esm/runner",
+    "start": "node --es-module-specifier-resolution=node dist/esm/start-json-server",
     "clean": "del-cli dist",
     "prebuild": "npm run clean",
     "build": "tsc"
@@ -18,6 +19,9 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@vikas/json-server-learn": "^0.0.5"
+    "@faker-js/faker": "^6.0.0-alpha.6",
+    "@vikas/json-server-learn": "^0.0.9",
+    "esm": "^3.2.25",
+    "json-server": "^0.17.0"
   }
 }
